--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
     "lint": "eslint --fix './src/**/*.{js,ts,jsx,tsx}'",
     "fmt": "prettier --write './src/**/*.{js,ts,jsx,tsx}'"
   },
@@ -18,6 +17,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "next": "13.1.6",
     "next-urql": "^4.0.2",
     "react": "18.2.0",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.6.0",
