--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,6 +11,8 @@
     "fmt": "prettier --write './src/**/*.{js,ts,jsx,tsx}'"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.6",
     "@types/node": "18.11.18",
     "@types/react-dom": "18.0.10",
