--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -16,6 +16,7 @@
     "@next/font": "13.1.6",
     "@types/node": "18.11.18",
     "@types/react-dom": "18.0.10",
+    "@urql/core": "^3.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
     "graphql": "^16.6.0",
@@ -33,10 +34,14 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "resolve-typescript-plugin": "^2.0.0"
   }
