--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -2,7 +2,6 @@
   "name": "yunne.web",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "module": "ESNext",
   "scripts": {
     "dev": "next dev",
@@ -31,6 +30,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
+    "@types/react": "^18.0.27",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
