--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "module": "ESNext",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
