--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -27,9 +27,9 @@
         "name": "next"
       }
     ],
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src/**/*"],
