--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
+    "@types/jest": "^28.0.0",
     "@types/react": "^18.0.27",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
@@ -44,6 +45,8 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "resolve-typescript-plugin": "^2.0.0"
+    "jest": "^28.0.0",
+    "resolve-typescript-plugin": "^2.0.0",
+    "ts-jest": "^28.0.0"
   }
 }
