--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.8",
     "@next/font": "13.1.6",
     "@types/node": "18.11.18",
     "@types/react-dom": "18.0.10",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "typescript": "4.9.4",
     "urql": "^3.0.3"
   },
