--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -27,7 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
-    "react-material-ui-carousel": "^3.4.2",
+    "swiper": "^9.0.5",
     "typescript": "4.9.4",
     "urql": "^3.0.3"
   },
